src/styles/Sidebar.css
.Ingredients-container {
  flex: 1;
  display: flex;
  flex-direction: column;
  max-width: 260px;
}

.Ingredients-form {
  flex: 1;
  margin-bottom: 10px;
  padding-bottom: 15px;
  max-height: 165px;
}

.Ingredients-list {
  flex: 4;
  display: flex;
  flex-direction: column;
  min-height: 0;
}

.Ingredients-list-header {
  flex: 1;
  margin-bottom: 10px;
  padding-top: 10px;
  padding-bottom: 15px;
  max-height: 135px;
}

.Ingredients-list-header-title {
  margin: 14px;
}

.Ingredients-list-container {
  flex: 3;
  display: flex;
  flex-direction: column;
  border: 1px;
  overflow: auto;
}

.Ingredients-list-item {
  float: left !important;
  width: 80% !important;
  padding-bottom: 20px !important;
}


.Ingredient-list-item-label {
  font-weight: bold;
}

.Ingredient-list-item-secondary-label {
  font-size: 12px;
  opacity: 0.8;
}

.Ingredient-list-item-secondary-label-red {
  font-size: 12px;
  opacity: 0.8;
  color: red;
}

.Ingredient-list-item-remove-button {
  float: right;
}

